--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dd-trace": "^5.23.0",
     "elastic-apm-node": "^4.8.0",
     "fastify": "^5.0.0",
+    "fastify-cors": "^6.0.3",
     "figlet": "^1.8.0",
     "pg": "^8.11.5"
   },
@@ -53,6 +54,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "@types/oracledb": "^5.2.3",
+    "@types/pg": "^8.11.6",
     "@types/sinon": "^10.0.13",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
@@ -73,7 +75,6 @@
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1",
-    "@types/pg": "^8.11.6"
+    "typescript-eslint": "^8.8.1"
   }
 }
